<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/logoimage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/water"/>

    <TextView
        android:id="@+id/idtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/iddesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/skipbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Skip"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Next"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:gravity="bottom|end"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:focusable="true"/>


    </LinearLayout>
</LinearLayout>